# ps2suitcase

./: CONTRIBUTORS.txt  Cargo.toml  LICENSE.txt  Readme.md  timestampdiscrepancyfixtest1.py
.cargo/: config.toml
.github/workflows/: build-psu-packer.yml  build-suitcase.yml  build.yml
assets/templates/: psu.toml  title.cfg
crates/builder/: Cargo.toml  build.rs
crates/builder/assets/: Info.plist  ps2.icns
crates/builder/src/: main.rs  utils.rs
crates/builder/src/components/: bottom_bar.rs  buttons.rs  file_tree.rs  tab_viewer.rs  toolbar.rs
crates/builder/src/data/: mod.rs  state.rs  virtual_file.rs
crates/builder/src/io/: calculate_size.rs  export_psu.rs  read_folder.rs
crates/builder/src/rendering/: mod.rs  shader.rs
crates/builder/src/shaders/: icn.vsh  outline.vsh
crates/builder/src/tabs/: file_tree.rs  icn_viewer.rs  icon_sys_viewer.rs  mod.rs  tab.rs  title_cfg_viewer.rs
crates/builder/src/ui/: bottom_bar.rs  dialogs.rs  file_tree.rs  menu_item.rs  mod.rs  tab_viewer.rs  toolbar.rs
crates/builder/src/wizards/: create_icn.rs  mod.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/memcard/: Cargo.toml
crates/memcard/src/: dir_entry.rs  fat.rs  main.rs
crates/ps2-filetypes/: Cargo.toml  title_cfg.toml
crates/ps2-filetypes/src/: icn.rs  icon_sys.rs  lib.rs  mcd.rs  psu.rs  templates.rs  util.rs
crates/ps2-filetypes/src/common/: bin.rs  color.rs  icn.rs  mod.rs  psu.rs  sjis.rs
crates/ps2-filetypes/src/parser/: icn.rs  icon_sys.rs  mod.rs  psu.rs  title_cfg.rs
crates/ps2-filetypes/src/writer/: icn.rs  mod.rs  psu.rs
crates/ps2-filetypes/tests/: icon_sys.rs
crates/ps2-filetypes/tests/fixtures/: icon_sys.b64  icon_sys_float.b64  icon_sys_int.b64
crates/ps2-mcm/: Cargo.toml
crates/ps2-mcm/src/: main.rs
crates/ps2-psupacker/: Cargo.toml
crates/ps2-psupacker/src/: main.rs  psu.rs
crates/psu-packer/: Cargo.toml
crates/psu-packer-gui/: Cargo.toml  build.rs
crates/psu-packer-gui/src/: lib.rs  main.rs  sas_timestamps.rs
crates/psu-packer-gui/src/ui/: dialogs.rs  file_picker.rs  icon_sys.rs  mod.rs  pack_controls.rs  theme.rs  timestamps.rs
crates/psu-packer/src/: lib.rs  main.rs
crates/psu-packer/tests/: exclude_psu_toml.rs  timestamp.rs
crates/suitcase/: Cargo.toml  build.rs
crates/suitcase/src/: main.rs
crates/suitcase/src/components/: bottom_bar.rs  buttons.rs  dialogs.rs  draw_background.rs  file_picker.rs  file_tree.rs  greeting.rs  menu_bar.rs  mod.rs  tab_viewer.rs  toolbar.rs  value_select.rs
crates/suitcase/src/data/: files.rs  mod.rs  state.rs  vec_math.rs
crates/suitcase/src/io/: export_psu.rs  file_watcher.rs  mod.rs  read_folder.rs  reveal_file_in_explorer.rs  validate.rs
crates/suitcase/src/rendering/: animation.rs  buffer.rs  icn_renderer.rs  mod.rs  orbit_camera.rs  program.rs  shader.rs  texture.rs  vertex_array.rs
crates/suitcase/src/shaders/: icn.fsh  icn.vsh  outline.fsh  outline.vsh
crates/suitcase/src/tabs/: icn_viewer.rs  icon_sys_viewer.rs  mod.rs  psu_toml_viewer.rs  tab.rs  title_cfg_viewer.rs
crates/suitcase/src/wizards/: create_icn.rs  mod.rs  wizard.rs
crates/xtask-build-app/: Cargo.toml
crates/xtask-build-app/src/: main.rs
test/: psu.toml
