[package]
name = "psu-packer-gui"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
psu-packer = { path = "../psu-packer" }
ps2-filetypes = { path = "../ps2-filetypes" }
eframe = "0.27"
rfd = "0.14"
chrono = "0.4.42"
egui_extras = { version = "0.27", features = ["chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
