[package]
name = "psu-packer-gui"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = []
# Re-enable the psu.toml editor UI with `--features psu-toml-editor`.
psu-toml-editor = []

[dependencies]
psu-packer = { path = "../psu-packer" }
ps2-filetypes = { path = "../ps2-filetypes" }
eframe = { version = "0.31.1", features = ["default", "wgpu"] }
rfd = "0.14"
chrono = "0.4.42"
egui_extras = { version = "0.31.1", features = ["chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
image = { version = "0.25.6", features = ["ico"] }

[build-dependencies]
winresource = "0.1"
