[package]
name = "psu-packer"
description = "PSU management utility"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
ps2-filetypes = { path = "../ps2-filetypes" }
toml = "0.9.5"
serde = { version = "1.0.219", features = ["derive"] }
argh = { version = "0.1.13" }
chrono = "0.4.42"
colored = "3.0.0"

[dev-dependencies]
tempfile = "3.14.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true