[package]
name = "suitcase"
version = "0.1.0"
edition = "2021"

[features]
default = ["glow", "wgpu"]
glow = []
wgpu = ["eframe/wgpu"]

[dependencies]
macros = { path = "../macros" }
eframe = { version = "0.31.1", features = ["default", "persistence"] }
egui_extras = { version = "0.31.1", features = ["svg", "image"] }
egui_dock = "0.16.0"
cgmath = "0.18.0"
ps2-filetypes = { path = "../ps2-filetypes" }
image = { version = "0.25.6", features = ["ico"] }
rfd = "0.15.3"
wavefront_obj = "11.0.0"
bytesize = "2.0.1"
serde = { version = "1.0.219", features = ["derive"] }
notify = "8.1.0"
toml = "0.9.2"
relative-path = "2.0.1"

[build-dependencies]
winresource = "0.1.20"

[dev-dependencies]
tempfile = "3.10.1"
